Adding in some options that let the user add a "Close window" button to every window, and also lets the user disable the dropdown menu on every window.
Also adding in a "Close window" item to the window context menu.

Also, we now save the options every 5 minutes. This is useful
because it means if Tab Organizer (or Chrome) crashes, you'll
only lose the last 5 minutes, rather than the entire session.

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -209,6 +209,11 @@
     "description": "Tells the user that they can click on the `x` button to close the tab. Should include a space at the end."
   },
 
+  "window_close": {
+    "message": "<u>C</u>lose window",
+    "description": "Tells the user that this will close the entire window. If possible, underline the letter `c`, but if there is no `c`, then underline nothing."
+  },
+
 
   "window_menu_open": {
     "message": "Open menu ",
